# material-bank_data-scrape

./: .gitignore  BRIEF.md  CLAUDE.md  MANIFEST.txt  MEMORY.md  PIPELINE.md  VISION.md  _reharvest.py  _tier3.py  pyproject.toml  suppliers.csv
deploy/: Caddyfile  README.md  auto_deploy.sh  backup_once.sh  bootstrap.sh  flywheel_once.sh  harvest_once.sh  harvest_service.sh  requirements.txt  suppliers_once.sh
docs/: enrichment-design.md
material_bank/: __init__.py  backup.py  bom.py  cli.py  company_extract.py  db.py  dealers.py  discover.py  drift.py  embed_worker.py  embeddings.py  enrich.py  events.py  extract.py  fetch.py  gstin.py  image_colour.py  image_prep.py  jobs.py  llm_ab.py  llm_accounting.py  llm_batch.py  llm_enrich.py  models.py  pipeline.py  planner.py  probe.py  quality.py  repair.py  resolve.py  retrieval.py  robots.py  serve.py  sitemap.py  supplier_enrich.py  tag_vocab.json  taxonomy.py  vectorstore.py
tests/: conftest.py  test_backup.py  test_catalog.py  test_company_extract.py  test_db.py  test_dealers.py  test_discover.py  test_drift.py  test_embed_images.py  test_embed_worker.py  test_embeddings.py  test_enrich.py  test_events.py  test_extract.py  test_fetch.py  test_gstin.py  test_harvest_generic.py  test_harvest_jsonld.py  test_harvest_kajaria.py  test_harvest_orientbell.py  test_harvest_parallel.py  test_harvest_steelcase.py  test_harvest_tier3.py  test_harvest_worker.py  test_image_colour.py  test_image_prep.py  test_jobs.py  test_jsonld.py  test_llm_ab.py  test_llm_accounting.py  test_llm_batch.py  test_llm_enrich.py  test_models.py  test_pipeline.py  test_probe_classify.py  (+11 more)
(+41 files in other folders)
