[project]
name = "material-bank"
version = "0.1.0"
description = "DSource AI — registry-driven Indian architectural-material harvest pipeline (Stage 0/1: registry + probe)"
requires-python = ">=3.11"
dependencies = [
    "curl_cffi>=0.7",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
# Local, free, Apache-2.0 embedding stack (marqo-ecommerce-B via open_clip).
# sqlite-vec is listed but currently unused: stock sqlite3 here can't load
# extensions — the VectorStore falls back to numpy cosine (see vectorstore.py).
embeddings = [
    "open_clip_torch",
    "transformers",
    "pillow",
    "numpy",
    "sqlite-vec",
]

[project.scripts]
mb-probe = "material_bank.cli:main"

[tool.setuptools.packages.find]
include = ["material_bank*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not browser'"   # browser e2e is opt-in: pytest -m browser
markers = [
    "browser: end-to-end Playwright tests needing a live server + model (slow)",
    "slow: slow tests",
]
